# uesave

./: .gitignore  Dockerfile  README.md  pyproject.toml  uesave.py
uesave/: __init__.py  app.py  uesave.py  webapp.py
uesave/static/: app.js  styles.css
uesave/templates/: index.html
