[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "uesave"
version = "0.1.0"
description = "Unreal Engine Game Save Parser"
readme = "README.md"
authors = [
  { name = "Pedro Boechat", email = "pboechat@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["unreal-engine", "savegame", "gvas", "parser"]
dependencies = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.22",
  "jinja2>=3.1",
  "python-multipart>=0.0.5",
]

[project.scripts]
uesave = "uesave.uesave:main"
uesave_webapp = "uesave.webapp:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["uesave*"], exclude = ["tests*"] } }